using UnityEngine;

public class BrandLevelUIView : UIView
{
    // Start is called once before the first execution of Update after the MonoBehaviour is created
    private void Awake()
    {
        type = UIType.Text;
    }
}
