using UnityEngine;

public class BrandPointUIView : UIView
{
    private void Awake()
    {
        type = UIType.Slider;
    }
}
