using UnityEngine;

public class MoneyUIView : UIView
{
    private void Awake()
    {
        type = UIType.Text;
    }

}
