using UnityEngine;

using UnityEngine.UI;
public class ButtonUiView : UIView
{
    public override void SetValue(UIUpdateArgs arg)
    {
    }
}
