@startuml FRONTEND

skinparam classAttributeIconSize 0
skinparam classFontName Courier
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #D8E8F0
skinparam classBorderColor #333333
skinparam classBackgroundColor #FFFFFF
skinparam interfaceBackgroundColor #E8F4E8
skinparam interfaceBorderColor #336633
skinparam arrowColor #333333
skinparam arrowThickness 1.5

title FrontEnd — Factory Game UML (Unity)

note as N1
  <b>Scope</b>: Assets/Scripts/FrontEnd/ (global namespace)
  <b>Bridge</b>: the ISubject/IObserver family in ObserverPattern/
  is also implemented by backend classes (FactoryStatus,
  RoundManager, BeltTrack) — see BACKEND.puml
end note

' ══════════════════════════════════════════════
' OBSERVER PATTERN (bridge interfaces)
' ══════════════════════════════════════════════

package "ObserverPattern" {
  interface ISubject {
    +RegisterObserver(o: IObserver): void
    +UnregisterObserver(o: IObserver): void
    +NotifyObservers(): void
  }
  interface IObserver {
    +OnNotify(subject: ISubject): void
  }
  interface IFactoryStatusSubject {
    +NotifyFactoryStatus(type: FactoryStatusType, arg: UIUpdateArgs): void
  }
  interface IFactoryStatusObserver {
    +OnFactoryStatusChanged(type: FactoryStatusType, arg: UIUpdateArgs): void
  }
  interface IRoundSubject {
    +NotifyRound(): void
  }
  interface IRoundObserver {
    +OnRoundChanged(s: IRoundSubject, arg: UIUpdateArgs): void
  }
  interface IBeltTrackLevelSubject {
    +NotifyBeltTrackLevel(): void
  }
  interface IBeltTrackLevelObserver {
    +OnBeltTrackLevelChanged(s: IBeltTrackLevelSubject): void
  }
  interface IBlockSubject {
    +NotifyBlock(): void
  }
  interface IBlockObserver {
    +OnBlockChanged(block: IBlockSubject): void
  }
  interface ISellBlockSubject {
    +NotifySellBlock(item: ISellable): void
  }
  interface ISellBlockObserver {
    +OnSellBlockReached(item: ISellable): void
  }
  interface IUIPanelButtonSubject {
  }
  interface IUIPanelButtonObserver {
    +OnButtonSelected(button: IUIPanelButtonSubject): void
  }

  ISubject  <|-- IFactoryStatusSubject
  ISubject  <|-- IRoundSubject
  ISubject  <|-- IBeltTrackLevelSubject
  ISubject  <|-- IBlockSubject
  ISubject  <|-- ISellBlockSubject
  ISubject  <|-- IUIPanelButtonSubject
  IObserver <|-- IFactoryStatusObserver
  IObserver <|-- IRoundObserver
  IObserver <|-- IBeltTrackLevelObserver
  IObserver <|-- IBlockObserver
  IObserver <|-- ISellBlockObserver
  IObserver <|-- IUIPanelButtonObserver

  ' stack the 12 derived interfaces into columns of three
  ' instead of one very wide rank
  IFactoryStatusSubject -[hidden]- IBeltTrackLevelSubject
  IBeltTrackLevelSubject -[hidden]- ISellBlockSubject
  IRoundSubject -[hidden]- IBlockSubject
  IBlockSubject -[hidden]- IUIPanelButtonSubject
  IFactoryStatusObserver -[hidden]- IBeltTrackLevelObserver
  IBeltTrackLevelObserver -[hidden]- ISellBlockObserver
  IRoundObserver -[hidden]- IBlockObserver
  IBlockObserver -[hidden]- IUIPanelButtonObserver
}

' ══════════════════════════════════════════════
' UI UPDATE ARGS (Pure C# value wrappers)
' ══════════════════════════════════════════════

class UIUpdateArgs {
  +Value: object <<get>>
}
class SliderUpdateArgs {
  +MaxValue: float <<get, set>>
}
class TextUpdateArgs {
}
class RoundParameters {
  +roundNum: int <<get>>
  +timeLimit: float <<get>>
  +targetAp: float <<get>>
  +currentAp: float <<get>>
}

UIUpdateArgs <|-- SliderUpdateArgs
UIUpdateArgs <|-- TextUpdateArgs
UIUpdateArgs ..> RoundParameters : wraps (RoundUI)

' ══════════════════════════════════════════════
' UIVIEW family (per-widget updates)
' ══════════════════════════════════════════════

abstract class UIView << MonoBehaviour >> {
  +{abstract} SetValue(arg: UIUpdateArgs): void
}

class TextUIView << MonoBehaviour >> {
  +Prefix: string <<get, protected set>>
  +Suffix: string <<get, protected set>>
  +SetValue(arg: UIUpdateArgs): void
}

class SliderUIView << MonoBehaviour >> {
  +SetValue(arg: UIUpdateArgs): void
}

class ButtonUiView << MonoBehaviour >> {
  +SetValue(arg: UIUpdateArgs): void
}

UIView <|-- TextUIView
UIView <|-- SliderUIView
UIView <|-- ButtonUiView
UIView ..> UIUpdateArgs : <<use>> param

class MoneyUIView
class BrandLevelUIView
class RoundUIView_RoundNum
class RoundUIView_TimeLimit
class RoundUIView_TargetAP
class RoundUIView_CurrentAP
class MachineModifyUIView_MachineType
class MachineModifyUIView_Level
class MachineModifyUIView_LevelUpPrice
class TrackModifyUIView_Level
class TrackModifyUIView_LevelUpPrice
class BrandPointUIView
class BankruptcyUIView

TextUIView <|-- MoneyUIView
TextUIView <|-- BrandLevelUIView
TextUIView <|-- RoundUIView_RoundNum
TextUIView <|-- RoundUIView_TimeLimit
TextUIView <|-- RoundUIView_TargetAP
TextUIView <|-- RoundUIView_CurrentAP
TextUIView <|-- MachineModifyUIView_MachineType
TextUIView <|-- MachineModifyUIView_Level
TextUIView <|-- MachineModifyUIView_LevelUpPrice
TextUIView <|-- TrackModifyUIView_Level
TextUIView <|-- TrackModifyUIView_LevelUpPrice
SliderUIView <|-- BrandPointUIView
SliderUIView <|-- BankruptcyUIView

' stack the leaf views into a 4-column grid instead of
' one very wide rank (this was the main cause of the
' extremely wide render)
MoneyUIView -[hidden]- RoundUIView_TargetAP
RoundUIView_TargetAP -[hidden]- MachineModifyUIView_MachineType
BrandLevelUIView -[hidden]- RoundUIView_CurrentAP
RoundUIView_CurrentAP -[hidden]- MachineModifyUIView_Level
RoundUIView_RoundNum -[hidden]- MachineModifyUIView_LevelUpPrice
MachineModifyUIView_LevelUpPrice -[hidden]- TrackModifyUIView_Level
RoundUIView_TimeLimit -[hidden]- TrackModifyUIView_LevelUpPrice
BrandPointUIView -[hidden]- BankruptcyUIView

enum UIType {
  Text
  Slider
  Button
}

' ══════════════════════════════════════════════
' Status-subscribing UIs (observers of backend subjects)
' ══════════════════════════════════════════════

class FactoryStatusUI << MonoBehaviour >> {
  -factoryStatusTypes: List~FactoryStatusType~ <<SerializeField>>
  -uiViews: List~UIView~ <<SerializeField>>
  -uiDict: Dict~FactoryStatusType, UIView~
  --
  +OnFactoryStatusChanged(type: FactoryStatusType, arg: UIUpdateArgs): void
}

class RoundUI << MonoBehaviour >> {
  -roundNumTxt: UIView <<SerializeField>>
  -timeLimitTxt: UIView <<SerializeField>>
  -targetApTxt: UIView <<SerializeField>>
  -currentApTxt: UIView <<SerializeField>>
  --
  +OnRoundChanged(s: IRoundSubject, arg: UIUpdateArgs): void
}

FactoryStatusUI ..|> IFactoryStatusObserver
RoundUI ..|> IRoundObserver
FactoryStatusUI "1" o-- "0..*" UIView : uiViews
RoundUI "1" o-- "4" UIView
FactoryStatusUI ..> "FactoryStatus\n(Backend)" : GetInstance().RegisterObserver
RoundUI ..> "RoundManager\n(Backend)" : Instance.RegisterObserver

' ══════════════════════════════════════════════
' BLOCK system (selectable blocks in the scene)
' ══════════════════════════════════════════════

abstract class BlockBase << MonoBehaviour >> {
  #Observers: List~IObserver~ <<get>>
  --
  +{abstract} UIType(): BlockUIType
  +SelectBlock(): void
  +UnselectBlock(): void
  +NotifyBlock(): void
}

class BeltBlock << MonoBehaviour >> {
  -_machine: Machine
  --
  +Machine: Machine <<get, set>>
  +MachineName: string <<get>>
  +MachineLevel: float <<get>>
  +MachineLevelUpPrice: float <<get>>
  +MachineSellPrice: float <<get>>
  --
  +UIType(): BlockUIType
  +CreateMachine(type: MachineType): bool
  +SellMachine(): void
  +MachineLevelUp(): bool
  -PayMoney(pay: float): bool
}

class TrackBlock << MonoBehaviour >> {
  -_beltTrack: BeltTrack
  --
  +TrackLevel: int <<get>>
  +TrackLevelUpPrice: float <<get>>
  --
  +UIType(): BlockUIType
  +TrackLevelUp(): void
  +PayMoney(pay: float): bool
}

class SellBlock << MonoBehaviour >> {
  +UIType(): BlockUIType
  +NotifySellBlock(item: ISellable): void
  -OnTriggerEnter(other: Collider): void
}

class BeltBlockManager << MonoBehaviour >> {
  -beltBlockPrefab: GameObject <<SerializeField>>
  -beltBlocks: List~BeltBlock~
  -beltTrack: BeltTrack
  --
  +generateBeltBlock(): void
  +OnBeltTrackLevelChanged(s: IBeltTrackLevelSubject): void
}

BlockBase ..|> IBlockSubject
BlockBase <|-- BeltBlock
BlockBase <|-- TrackBlock
BlockBase <|-- SellBlock
SellBlock ..|> ISellBlockSubject
BeltBlockManager ..|> IBeltTrackLevelObserver
BeltBlockManager "1" *-- "0..*" BeltBlock : beltBlocks
BeltBlock ..> "Machine (Backend)" : Instantiate/LevelUp
BeltBlock ..> "FactoryStatus (Backend)" : ModifyMoney
TrackBlock ..> "BeltTrack (Backend)" : LevelUp
SellBlock ..> "ISellable (Backend)" : detects

' ══════════════════════════════════════════════
' Input / selection (InteractEvent)
' ══════════════════════════════════════════════

enum BlockUIType {
  Null
  MachineSelect
  MachineModify
  TrackModify
}

class BlockSelect << MonoBehaviour >> {
  -selectObj: GameObject <<SerializeField>>
  -m_UiPanels: List~UIPanelMapping~ <<SerializeField>>
  -uiDict: Dict~BlockUIType, UIPanelBase~
  -currentBlock: BlockBase
  --
  -HandleSelection(): void
  -SetCurrentUI(uiType: BlockUIType): void
  -SelectNewBlock(newBlock: BlockBase): void
  -DeselectCurrentBlock(): void
  -CloseAllUI(): void
}

class CameraMove << MonoBehaviour >> {
  -speed: float
  -initPos: Vector3
}

BlockSelect ..> BlockBase : raycast pick
BlockSelect "1" o-- "0..*" UIPanelBase : uiDict

' ══════════════════════════════════════════════
' UI panels + buttons (MachineUI)
' ══════════════════════════════════════════════

class UIPanelBase << MonoBehaviour >> {
  -panel: GameObject <<SerializeField>>
  -_targetBlock: BlockBase
  --
  +TargetBlock: BlockBase <<get, protected set>>
  --
  +OpenUI(block: BlockBase): void
  +CloseUI(): void
  +SetSelectOj(selectObj: GameObject): void
  +OnBlockChanged(block: IBlockSubject): void
  +OnButtonSelected(button: IUIPanelButtonSubject): void
}

class MachineSelectUI << MonoBehaviour >> {
  -buttonPrefab: GameObject <<SerializeField>>
  -buttons: List~UIPanelButtonBase~
  --
  +OnButtonSelected(button: IUIPanelButtonSubject): void
}

class MachineModifyUI << MonoBehaviour >> {
  -_machineTypeTxt: UIView <<SerializeField>>
  -_levelTxt: UIView <<SerializeField>>
  -_levelUpPayTxt: UIView <<SerializeField>>
  --
  +OnBlockChanged(block: IBlockSubject): void
  +OnButtonSelected(button: IUIPanelButtonSubject): void
}

class TrackModifyUI << MonoBehaviour >> {
  -_trackLevelTxt: UIView <<SerializeField>>
  -_trackLevelUpPriceTxt: UIView <<SerializeField>>
  --
  +OnBlockChanged(block: IBlockSubject): void
  +OnButtonSelected(button: IUIPanelButtonSubject): void
}

UIPanelBase ..|> IBlockObserver
UIPanelBase ..|> IUIPanelButtonObserver
UIPanelBase <|-- MachineSelectUI
UIPanelBase <|-- MachineModifyUI
UIPanelBase <|-- TrackModifyUI

' stack sibling panels to limit width
MachineSelectUI -[hidden]- TrackModifyUI

abstract class UIPanelButtonBase << MonoBehaviour >> {
  -_observers: List~IObserver~
  --
  +OnButtonClick(): void
}

class MachineSelectButton << MonoBehaviour >> {
  +MachineType: MachineType <<get, set>>
  +Initialize(type: MachineType, observer: IUIPanelButtonObserver): void
}

class MachineModifyButton << MonoBehaviour >>
class MachineModifyButton_Levelup << MonoBehaviour >>
class MachineModifyButton_Sell << MonoBehaviour >>
class TrackModifyButton_LevelUp << MonoBehaviour >>

UIPanelButtonBase ..|> IUIPanelButtonSubject
UIPanelButtonBase <|-- MachineSelectButton
UIPanelButtonBase <|-- MachineModifyButton
UIPanelButtonBase <|-- TrackModifyButton_LevelUp
MachineModifyButton <|-- MachineModifyButton_Levelup
MachineModifyButton <|-- MachineModifyButton_Sell

' stack sibling buttons to limit width
MachineSelectButton -[hidden]- TrackModifyButton_LevelUp
MachineModifyUI ..> BeltBlock : MachineLevelUp / SellMachine
MachineSelectUI ..> BeltBlock : CreateMachine
TrackModifyUI ..> TrackBlock : TrackLevelUp

' ══════════════════════════════════════════════
' MACHINE DATA (ScriptableObject)
' ══════════════════════════════════════════════

class MachineManager << (S,#FFD700) MonoBehaviour singleton >> {
  -machineInfoList: MachineInfoList <<SerializeField>>
  -machineDict: Dict~MachineType, GameObject~
  --
  +Instance: MachineManager <<get>> {static}
  +GetMachine(type: MachineType): GameObject
}

class MachineInfoList << ScriptableObject >> {
  -machineInfos: List~MachineInfo~ <<SerializeField>>
  --
  +Count: int <<get>>
  +GetMachineAt(i: int): MachineInfo
}

class MachineInfo << ScriptableObject >> {
  -type: MachineType <<SerializeField>>
  -machine: GameObject <<SerializeField>>
  --
  +GetMachineType(): MachineType
  +GetMachine(): GameObject
}

MachineManager "1" o-- "1" MachineInfoList
MachineInfoList "1" o-- "0..*" MachineInfo
BeltBlock ..> MachineManager : GetMachine(type)

' anchor otherwise-disconnected nodes (enums, CameraMove) below
' the graph instead of letting them widen the layout sideways
RoundParameters -[hidden]- UIType
UIType -[hidden]- BlockUIType
BlockUIType -[hidden]- CameraMove

@enduml
